[gd_scene load_steps=4 format=2]

[ext_resource path="res://Mine/Enemies/Enemy.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0.247619, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.752381, 0.1 ), -3.27273, 0.0, 0, 0 ]

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 4, 4, -4, 4, -4, -4, 4, -4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 4, 4, -4, 4, -4, -4, 4, -4 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Line2D" type="Line2D" parent="."]
width_curve = SubResource( 1 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
